# qrTOtext

./: README.md  pyproject.toml  qrTOtext.py
